classDiagram
    direction LR

    %% ══════ M1 统一层（新增）══════
    class Terms {
        <<abstract final>>
        +String scene$ "场景"
        +String library$ "曲库"
        +String track$ "歌曲"
        +String album$ "专辑"
        +String folder$ "目录"
        +String source$ "音源"
        +String server$ "服务器"
        +String notificationCenter$ "通知中心"
    }
    class PageScaffold {
        <<StatelessWidget>>
        +String title
        +Widget? search
        +Widget? leadingPanel
        +Widget body
        +Widget build(context)
    }
    class InfoRow {
        <<StatelessWidget>>
        +Track? track
        +VoidCallback? onTap
        +Widget build(context)
    }
    class StateChip {
        <<StatelessWidget>>
        +ChipTone tone
        +String label
        +Widget build(context)
    }
    class ChipTone {
        <<enumeration>>
        experimenting
        stable
        retired
        connecting
        ok
        failed
    }
    PageScaffold --> InfoRow : 复用
    PageScaffold ..> Terms : 文案引用

    %% ══════ M2 实验（新增）══════
    class ExperimentStatus {
        <<enumeration>>
        experimenting
        stable
        retired
    }
    class ExperimentItem {
        +String id
        +String name
        +String description
        +IconData icon
        +ExperimentStatus status
        +bool enabledByDefault
        +Widget Function() builder
    }
    class ExperimentConsent {
        +bool agreed
        +Map~String,bool~ enabled
    }
    class ExperimentConsentNotifier {
        +Future~void~ agree()
        +Future~void~ revoke()
        +Future~void~ setEnabled(String id, bool on)
    }
    ExperimentItem ..> ExperimentStatus
    ExperimentConsentNotifier ..> ExperimentConsent

    %% ══════ M3 曲库三形态（新增）══════
    class LibraryViewStyle {
        <<enumeration>>
        card
        folder
        album
    }
    class LibraryFolderNode {
        +String name
        +String pathKey
        +List~LibraryFolderNode~ children
        +List~Track~ tracks
        +int get trackCount
    }

    %% ══════ M4 音源健康（新增）══════
    class SourceHealthStatus {
        <<enumeration>>
        connecting
        ok
        failed
        unknown
    }
    class SourceHealth {
        +SourceHealthStatus status
        +DateTime? lastTestedAt
        +String? errorDetail
    }
    SourceHealth ..> SourceHealthStatus

    %% ══════ M5 + 2.5D 共享基础（新增）══════
    class VoxelBlockType {
        +String id
        +String name
        +IconData icon
        +String sfxKey
        +double baseVolume
        +Color color
    }
    class VoxelSoundScene {
        +String id
        +String name
        +Map~String,String~ blocks
        +Map~String,dynamic~ toJson()$
        +factory VoxelSoundScene.fromJson()$
    }
    class VoxelCanvasController {
        <<ChangeNotifier>>
        +int cols
        +int rows
        +Map~String,String~ blocks
        +VoxelBlockType selected
        +void setBlock(int x, int y)
        +void removeBlock(int x, int y)
        +void undo()
        +void redo()
        +void clear()
        +void load(VoxelSoundScene scene)
        +VoxelSoundScene toScene(String id, String name)
    }
    class VoxelCanvasView {
        <<CustomPaint widget>>
        +VoxelCanvasController controller
        +VoidCallback? onTapBlock
        +Widget build(context)
    }
    class SoundBlockMixer {
        +Future~void~ preview(VoxelCanvasController ctrl, {bool loop})
        +Future~void~ stop()
    }
    VoxelCanvasView --> VoxelCanvasController
    VoxelCanvasController *-- VoxelBlockType : selected
    SoundBlockMixer --> VoxelCanvasController

    %% ══════ EQ（新增）══════
    class EqPreset {
        +String id
        +String name
        +double low
        +double mid
        +double high
    }
    class EqEngine {
        +bool get supported
        +Future~void~ apply(EqPreset preset)
        +void applySimulation(EqPreset preset)
    }
    EqEngine ..> EqPreset

    %% ══════ 传感器（新增）══════
    class SensorService {
        +Stream~double~ lightLux()
        +Stream~bool~ shakeDetected()
        +void dispose()
    }

    %% ══════ M6 通知（新增）══════
    class NotificationEvent {
        +String id
        +String title
        +String message
        +DateTime at
    }

    %% ══════ v2 Provider 层（新增/修改）══════
    class V2Providers {
        <<library>>
        +StateNotifierProvider~ExperimentConsentNotifier,ExperimentConsent~ experimentConsentProvider$
        +Provider~List~ExperimentItem~~ experimentsProvider$
        +StateProvider~LibraryViewStyle~ libraryViewStyleProvider$
        +StateNotifierProvider~SourceHealthNotifier,Map~String,SourceHealth~~ sourceHealthProvider$
        +StateNotifierProvider~VoxelScenesNotifier,List~VoxelSoundScene~~ voxelSoundScenesProvider$
        +StateNotifierProvider~NotificationNotifier,List~NotificationEvent~~ recentNotificationsProvider$
        +StateProvider~bool~ backgroundPlayProvider$
        +StateProvider~bool~ lockScreenProvider$
        +StateProvider~bool~ notificationBarProvider$
        +Provider~EqEngine~ eqEngineProvider$
        +Provider~SensorService~ sensorServiceProvider$
        +StateProvider~EqPreset~ eqPresetProvider$
    }
    V2Providers ..> ExperimentItem
    V2Providers ..> LibraryViewStyle
    V2Providers ..> SourceHealth
    V2Providers ..> VoxelSoundScene
    V2Providers ..> NotificationEvent
    V2Providers ..> EqEngine
    V2Providers ..> SensorService

    %% ══════ 既有模型变更 ══════
    class Scene {
        <<existing · modified>>
        +bool visible
        +String? bgmUri
        +String? bgmTitle
        +String? bgmArtist
    }
    class SettingsSection {
        <<existing enum · modified>>
        playback
        source
        scene
        notification
        about
        experiment  "+ 新增第 6 槽"
    }
